--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -495,7 +495,7 @@ font-family: "Space Grotesk", serif;
   font-weight:bold;
   text-decoration: underline;
   margin: 10px 0 0;
-  color:#f08f74;
+  color:#e2ba16;
  }
  @media (max-width: 767.98px) {
   .section-title {
