--- a/assets/css/ps.css
+++ b/assets/css/ps.css
@@ -64,7 +64,7 @@ body {
     left: 0;
     height: 10%;
     width: 100%;
-    background-color: #f08f74;
+    background-color: #e2ba16;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -122,7 +122,7 @@ p {
     color:transparent;
     font-weight: bold;
     -webkit-text-stroke-width: 1.0px;
-    -webkit-text-stroke-color:black;
+    -webkit-text-stroke-color:#089e9e;
 }
 
 @media (max-width: 768px) {
