--- a/assets/css/hc.css
+++ b/assets/css/hc.css
@@ -64,7 +64,7 @@
       left: 0;
       height: 10%;
       width: 100%;
-      background-color: #f08f74;
+      background-color: #e2ba16;
       overflow: hidden;
       display: flex;
       align-items: center;
@@ -111,7 +111,7 @@
   .slider-item {
       flex-shrink: 0;
       font-size: 1.5rem;
-      color: black;
+      color: #089e9e;
       font-weight: bolder;
       white-space: nowrap;
       text-overflow: ellipsis;
@@ -151,7 +151,7 @@ p {
     color:transparent;
     font-weight: bold;
     -webkit-text-stroke-width: 1.0px;
-    -webkit-text-stroke-color:black;
+    -webkit-text-stroke-color:#089e9e;
 }
 
 @media (max-width: 768px) {
